# my-calculator-sdk

./: README.md  app.py  generate_tree.py  pyproject.toml  requirements.txt  tree.txt
src/my_calculator/: calculator.py
tests/: test_calculator.py
